Solvin ngx-toastr

--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -10,7 +10,7 @@
       placeholder="username"
     />
     <input
-      type="text"
+      type="password"
       class="form-control"
       name="password"
       [(ngModel)]="model.password"
