--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -1,18 +1,33 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">DatingApp</a>
-    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
+    <a class="navbar-brand" routerLink="/">DatingApp</a>
+    <ul
+      class="navbar-nav me-auto mb-2 mb-md-0"
+      *ngIf="accountService.currentUser$ | async"
+    >
       <li class="nav-item">
-        <a class="nav-link" href="#" >Matches</a>
+        <a class="nav-link" routerLink="/members" routerLinkActive="active"
+          >Matches</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
+        <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+          >Lists</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
+        <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+          >Messages</a
+        >
       </li>
     </ul>
-    <form #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete = "off" *ngIf="!(accountService.currentUser$ | async)">
+    <form
+      #loginForm="ngForm"
+      class="d-flex"
+      (ngSubmit)="login()"
+      autocomplete="off"
+      *ngIf="!(accountService.currentUser$ | async)"
+    >
       <input
         name="username"
         [(ngModel)]="model.username"
@@ -30,7 +45,9 @@
       <button class="btn btn-outline-success" type="submit">Login</button>
     </form>
     <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-      <button class="btn btn-primary dropdown-toggle" dropdownToggle>Welcome</button>
+      <button class="btn btn-primary dropdown-toggle" dropdownToggle>
+        Welcome
+      </button>
       <div class="dropdown-menu" *dropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
         <a class="dropdown-item" (click)="logout()">Logout</a>
