Basic Error testing/handling

--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -19,7 +19,12 @@
           >
         </li>
       </ng-container>
-    </ul>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/testerrors" routerLinkActive="active"
+          >Test Errors</a
+        >
+      </li>
+  </ul>
     <form
       #loginForm="ngForm"
       class="d-flex"
