--- a/client/src/app/components/members/members-details/members-details.component.html
+++ b/client/src/app/components/members/members-details/members-details.component.html
@@ -56,6 +56,7 @@
             [options]="galleryOptions"
             [images]="galleryImages"
             class="ngx-gallery"
+            style='display: inline-block; margin-bottom: 20px'
           >
           </ngx-gallery>
         </tab>
