--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -48,12 +48,12 @@
       />
       <button class="btn btn-outline-success" type="submit">Login</button>
     </form>
-    <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-      <button class="btn btn-primary dropdown-toggle" dropdownToggle>
-        Welcome
+    <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+      <button class="btn btn-info dropdown-toggle" dropdownToggle>
+        Welcome {{user.username}}
       </button>
       <div class="dropdown-menu" *dropdownMenu>
-        <a class="dropdown-item">Edit Profile</a>
+        <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
         <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
