Photo editing done

--- a/client/src/app/components/members/members-edit/members-edit.component.html
+++ b/client/src/app/components/members/members-edit/members-edit.component.html
@@ -103,7 +103,7 @@
         </form>
       </tab>
       <tab heading="Edit Photos">
-        <!-- TODO:Photo Editor -->
+        <app-photo-editor [member]="member"></app-photo-editor>
       </tab>
     </tabset>
   </div>
