--- a/client/src/app/components/members/members-list/members-list.component.html
+++ b/client/src/app/components/members/members-list/members-list.component.html
@@ -1,5 +1,10 @@
+<div class="row mb-2">
+  <div class="col-2 ms-2">
+    <button class="btn btn-secondary" (click)="search()">Search</button>
+  </div>
+</div>
 <div class="row">
-  <div class="col-2" *ngFor="let member of members$ | async">
+  <div class="col-2 ms-1" *ngFor="let member of members$ | async">
     <app-member-card [member]="member"></app-member-card>
   </div>
 </div>
