--- a/client/src/app/components/members/member-card/member-card.component.html
+++ b/client/src/app/components/members/member-card/member-card.component.html
@@ -4,10 +4,16 @@
       src="{{ member.photoURL }}"
       alt="{{ member.knownAs }}"
       class="card-img-top"
+      routerLink="/members/{{ member.username }}"
     />
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
-        <button routerLink="/members/{{member.username}}" class="btn btn-primary"><i class="fa fa-user"></i></button>
+        <button
+          routerLink="/members/{{ member.username }}"
+          class="btn btn-primary"
+        >
+          <i class="fa fa-user"></i>
+        </button>
       </li>
       <li class="list-inline-item">
         <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
@@ -19,8 +25,11 @@
   </div>
   <div class="card-body p-1">
     <h6 class="card-title text-center mb-1">
-      <i class="fa fa-user me-2"></i>
+      <i
+        class="fa {{ member.gender == 'male' ? 'fa-male' : 'fa-female' }} me-2"
+      ></i>
       {{ member.knownAs }}
+      ({{ member.age }})
     </h6>
     <p class="card-text text-muted text-center">{{ member.city }}</p>
   </div>
